# parallel-RCM

./: CMakeLists.txt  Makefile  README.md  config.h  main.c  main_unified.c
Matlab/: mat2csr.m
src/csr/: csr.c  csr.h
src/graph/: graph.c  graph.h
src/quicksort/: quicksort.c  quicksort.h
src/rcm/: rcm.c  rcm.h
src/rcm_parallel/: rcm_parallel.c  rcm_parallel.h
